Bash scripts: Applied patch 1761455 from José María Fernández, thank you. Made some other changes too.
svn path=/trunk/eXist/; revision=6310